# ai-hackathon-2025

./: Data Exploration.docx  README.md  asdf.ipynb  collegeAI.ipynb  colleges_updated.csv  input.csv  lol.ipynb  pyproject.toml
datasets/: Liberal Arts College Data 2002-2019.xlsx  US News Liberal Arts Colleges 2025.xlsx  US News National University Rankings 2025.xlsx
