[project]
name = "ai-hackathon-2025"
version = "0.1.0"
description = "derp diddy aint here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "ipykernel",
    "pandas",
    "langchain",
    "langchain-core",
    "langchain-ollama",
    "langchain-community",
    "langserve[all]",
    "uvicorn[standard]",
    "jupyter",
    "notebook",
    "jupyterlab"
]